updates after testing

--- a/index.html
+++ b/index.html
@@ -47,14 +47,19 @@
 		strong {
 			font-weight: 700;
 		}
+
+p {margin-bottom: 1rem;}
+		a {text-decoration: none; color:#7F1B95;}
+
+		a:hover {text-decoration: underline;}
 	</style>
 
 <body>
 
 	<iframe src="index-NEW.html"></iframe>
 	<section>
-		<p>instructions here</p>
-		<p><strong>contact info here</strong></p>
+		<p>instructions for playing presentation here</p>
+		<p><strong>bennetc7@lcc.edu</strong><br><a href="https://mister-chad.com/" target='_blank' title='opens in new tab'>mister-chad.com</a></p>
 	</section>
 </body>
 
