--- a/index-NEW.html
+++ b/index-NEW.html
@@ -359,6 +359,7 @@
 			<section data-background-image="meme.png" data-background-size="contain"
 				data-background-opacity=".3">
 				<h1>questions?</h1>
+				<p>send me an email <br><strong>bennetc7@lcc.edu</strong></p>
 			</section>
 		</div>
 	</div>
