--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 			text-rendering: optimizeLegibility;
 			background: #fff;
 			background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Montserrat, sans-serif !important;
+			font-weight: 400;
 		}
 
 		iframe {
