update the presentation

--- a/index-NEW.html
+++ b/index-NEW.html
@@ -130,114 +130,116 @@
 				</ul>
 			</section>
 
-				<section data-background-image="screen.png" data-background-size="contain"
-					data-background-opacity=".2">
-					<h2>ARTS 173</h2>
-					<p><strong>COMPUTER GRAPHICS - WEB DESIGN</strong></p>
-					<ul>
-						<li>learn web design process</li>
-						<li>html & css to build your own websites</li>
-						<li>create animations & web effects</li>
-					</ul>
-				</section>
+			<section data-background-image="screen.png" data-background-size="contain"
+				data-background-opacity=".2">
+				<h2>ARTS 173</h2>
+				<p><strong>COMPUTER GRAPHICS - WEB DESIGN</strong></p>
+				<ul>
+					<li>learn web design process</li>
+					<li>html & css to build your own websites</li>
+					<li>create animations & web effects</li>
+				</ul>
+			</section>
 
-				<section>
-					<h2>BUT ALSO...</h2>
-				</section>
+			<section>
+				<h2>BUT ALSO...</h2>
+			</section>
 
-				<section data-background-image="duck.gif" data-background-size="contain"
-					data-background-opacity=".2">
-					<p><strong>ANIMATION!</strong></p>
-					<ul>
-						<li>animated gifs</li>
-						<li>make your own cartoons & movies</li>
-						<li>create class collabs</li>
-					</ul>
-				</section>
+			<section data-background-image="duck.gif" data-background-size="contain"
+				data-background-opacity=".2">
+				<p><strong>ANIMATION!</strong></p>
+				<ul>
+					<li>animated gifs</li>
+					<li>make your own cartoons & movies</li>
+					<li>create class collabs</li>
+				</ul>
+			</section>
 
 			<!-- what to expect -->
 
-				<section data-background-image="thinking.png" data-background-size="contain"
-					data-background-opacity=".5">
-					<h2>yeah, but what can I expect?</h2>
-					<img src="empty.png" />
-				</section>
+			<section data-background-image="thinking.png" data-background-size="contain"
+				data-background-opacity=".5">
+				<h2>yeah, but what can I expect?</h2>
+				<img src="empty.png" />
+			</section>
 
-				<section>
-					<p><em>you can expect...</em></p>
-					<h1>a lot of FUN!</h1>
-				</section>
+			<section>
+				<p><em>you can expect...</em></p>
+				<h1>a lot of FUN!</h1>
+			</section>
 
-				<section data-background-image="group.jpg" data-background-size="cover"
-					data-background-opacity=".2">
-					<p>my class is called <strong>The Playground</strong></p>
-					<ul>
-						<li>a safe place to be yourself and find your voice</li>
-						<li>meet new friends who encourage your crazy</li>
-						<li>a sense of controlled chaos is encouraged</li>
-					</ul>
-				</section>
+			<section data-background-image="group.jpg" data-background-size="cover"
+				data-background-opacity=".2">
+				<p>my class is called <strong>The Playground</strong></p>
+				<ul>
+					<li>a safe place to be yourself and find your voice</li>
+					<li>meet new friends who encourage your crazy</li>
+					<li>a sense of controlled chaos is encouraged</li>
+				</ul>
+			</section>
 
-				<section>
-					<p><em>you can expect...</em></p>
-					<h1>awesome technology</h1>
-				</section>
+			<section>
+				<p><em>you can expect...</em></p>
+				<h1>awesome technology</h1>
+			</section>
 
-				<section data-background-image="computer.jpg" data-background-size="cover"
-					data-background-opacity=".3">
-					<ul>
-						<li>expensive cutting-edge software</li>
-						<li>nice shiny mac computers</li>
-						<li>digital drawing tablets</li>
-						<li>a crazy room with purple walls</li>
-					</ul>
-				</section>
+			<section data-background-image="computer.jpg" data-background-size="cover"
+				data-background-opacity=".3">
+				<ul>
+					<li>expensive cutting-edge software</li>
+					<li>nice shiny mac computers</li>
+					<li>digital drawing tablets</li>
+					<li>a crazy room with purple walls</li>
+				</ul>
+			</section>
 
-				<section>
-					<p><em>you can expect...</em></p>
-					<h1>creative assignments</h1>
-				</section>
+			<section>
+				<p><em>you can expect...</em></p>
+				<h1>creative assignments</h1>
+			</section>
 
-				<section data-background-image="money.jpg" data-background-size="cover"
-					data-background-opacity=".3">
-					<ul>
-						<li>very open-ended design challenges</li>
-						<li>freedom to find your own solutions</li>
-						<li>tons of variety in assignment prompts</li>
-					</ul>
-				</section>
+			<section data-background-image="money.jpg" data-background-size="cover"
+				data-background-opacity=".3">
+				<ul>
+					<li>very open-ended design challenges</li>
+					<li>freedom to find your own solutions</li>
+					<li>tons of variety in assignment prompts</li>
+				</ul>
+			</section>
 
-				<section>
-					<p><em>you can expect...</em></p>
-					<h1>professional challenges</h1>
-				</section>
+			<section>
+				<p><em>you can expect...</em></p>
+				<h1>professional challenges</h1>
+			</section>
 
-				<section data-background-image="desk.jpg" data-background-size="cover"
-					data-background-opacity=".3">
-					<ul>
-						<li>SkillsUSA design competitions</li>
-						<li>actual clients with real design needs</li>
-						<li>job shadow opportunities</li>
-					</ul>
-				</section>
+			<section data-background-image="desk.jpg" data-background-size="cover"
+				data-background-opacity=".3">
+				<ul>
+					<li>SkillsUSA design competitions</li>
+					<li>actual clients with real design needs</li>
+					<li>job shadow opportunities</li>
+				</ul>
+			</section>
 
-				<section>
-					<p><em>you can expect...</em></p>
-					<h1>technically difficult work</h1>
-				</section>
+			<section>
+				<p><em>you can expect...</em></p>
+				<h1>technically difficult work</h1>
+			</section>
 
-				<section data-background-image="space.jpg" data-background-size="cover"
-					data-background-opacity=".3">
-					<ul>
-						<li>complex software takes time to learn</li>
-						<li>creativity is open, no single right answers</li>
-						<li>some projects are long and require multiple revisions</li>
-					</ul>
-				</section>
+			<section data-background-image="space.jpg" data-background-size="cover"
+				data-background-opacity=".3">
+				<ul>
+					<li>complex software takes time to learn</li>
+					<li>creativity is open, no single right answers</li>
+					<li>some projects are long and require multiple revisions</li>
+				</ul>
+			</section>
 
-				<section>
-					<p>something about the video on the next page</p>
-				</section>
+			<section>
+				<p><strong>mostly we play with visual ideas and explore possibilities to make things better.</strong></p><br>
+				<p>the video on the next page gives you a good sense of what the class is all about.
+				</p>
+			</section>
 			<!-- video
 			<section data-background-video="better.mp4" data-background-video-loop data-background-video-muted>
 			</section>-->
@@ -250,110 +252,110 @@
 			</section>
 
 			<!-- mister chad -->
-				<section data-background-image="meCircle.png" data-background-size="contain"
-					data-background-opacity=".5">
-					<h2>what about the teacher?</h2>
-					<img src="empty.png" />
-					<p class="fragment fade-in-then-out back">mister chad is pretty cool</p>
-				</section>
+			<section data-background-image="meCircle.png" data-background-size="contain"
+				data-background-opacity=".5">
+				<h2>what about the teacher?</h2>
+				<img src="empty.png" />
+				<p class="fragment fade-in-then-out back">mister chad is pretty cool</p>
+			</section>
 
-				<section data-background-image="chad.jpg" data-background-size="contain"
-					data-background-opacity=".7">
-					<p><strong>mister chad...</strong></p>
-					<img src="empty.png" />
-					<p class="fragment fade-in-then-out back">makes the class lots of fun</p>
-				</section>
+			<section data-background-image="chad.jpg" data-background-size="contain"
+				data-background-opacity=".7">
+				<p><strong>mister chad...</strong></p>
+				<img src="empty.png" />
+				<p class="fragment fade-in-then-out back">makes the class lots of fun</p>
+			</section>
 
-				<section data-background-image="slide.jpg" data-background-size="contain"
-					data-background-opacity=".7">
-					<p><strong>mister chad...</strong></p>
-					<img src="empty.png" />
-					<p class="fragment fade-in-then-out back">likes to play too</p>
-				</section>
+			<section data-background-image="slide.jpg" data-background-size="contain"
+				data-background-opacity=".7">
+				<p><strong>mister chad...</strong></p>
+				<img src="empty.png" />
+				<p class="fragment fade-in-then-out back">likes to play too</p>
+			</section>
 
-				<section data-background-image="park.png" data-background-size="contain"
-					data-background-opacity=".7">
-					<p><strong>mister chad...</strong></p>
-					<img src="empty.png" />
-					<p class="fragment fade-in-then-out back">will help you grow as an artist</p>
-				</section>
+			<section data-background-image="park.png" data-background-size="contain"
+				data-background-opacity=".7">
+				<p><strong>mister chad...</strong></p>
+				<img src="empty.png" />
+				<p class="fragment fade-in-then-out back">will help you grow as an artist</p>
+			</section>
 
-				<section data-background-image="thing.jpg" data-bac kground-size="contain"
-					data-background-opacity=".7">
-					<p><strong>mister chad...</strong></p>
-					<img src="empty.png" />
-					<p class="fragment fade-in-then-out back">has become the focus of a cult</p>
-				</section>
+			<section data-background-image="thing.jpg" data-bac kground-size="contain"
+				data-background-opacity=".7">
+				<p><strong>mister chad...</strong></p>
+				<img src="empty.png" />
+				<p class="fragment fade-in-then-out back">has become the focus of a cult</p>
+			</section>
 
-				<section data-background-image="socks.jpg" data-background-size="contain"
-					data-background-opacity=".7">
-					<p><strong>mister chad...</strong></p>
-					<img src="empty.png" />
-					<p class="fragment fade-in-then-out back">is also a pair of socks</p>
-				</section>
+			<section data-background-image="socks.jpg" data-background-size="contain"
+				data-background-opacity=".7">
+				<p><strong>mister chad...</strong></p>
+				<img src="empty.png" />
+				<p class="fragment fade-in-then-out back">is also a pair of socks</p>
+			</section>
 
 
 			<!-- career possibilities -->
 
-				<section data-background-image="thinking2.png" data-background-size="contain"
-					data-background-opacity=".5">
-					<h2>what can i do after this class?</h2>
-					<img src="empty.png" />
-				</section>
+			<section data-background-image="thinking2.png" data-background-size="contain"
+				data-background-opacity=".5">
+				<h2>what can i do after this class?</h2>
+				<img src="empty.png" />
+			</section>
 
-				<section data-background-image="paint.jpg" data-background-size="cover"
-					data-background-opacity=".1">
-					<h2>DESIGN CAREERS</h2>
-					<p>just a few of the many possibilities...</p>
-					<ul>
-						<li>graphic designer</li>
-						<li>web designer</li>
-						<li>marketing guru</li>
-						<li>video game designer</li>
-						<li>animator</li>
-						<li>fine artist</li>
-						<li>freelance designer</li>
-					</ul>
-				</section>
+			<section data-background-image="paint.jpg" data-background-size="cover"
+				data-background-opacity=".1">
+				<h2>DESIGN CAREERS</h2>
+				<p>just a few of the many possibilities...</p>
+				<ul>
+					<li>graphic designer</li>
+					<li>web designer</li>
+					<li>marketing guru</li>
+					<li>video game designer</li>
+					<li>animator</li>
+					<li>fine artist</li>
+					<li>freelance designer</li>
+				</ul>
+			</section>
 
-				<section data-background-image="paint.jpg" data-background-size="cover"
-					data-background-opacity=".1">
-					<h2>AFTER THE CLASS</h2>
-					<p>just a few of the possibilities...</p>
-					<ul>
-						<li>enter the industry</li>
-						<li>community college</li>
-						<li>four year college</li>
-					</ul>
-					<p><strong>for juniors:</strong></p>
-					<ul>
-						<li>capital region technical early college</li>
-					</ul>
-				</section>
+			<section data-background-image="paint.jpg" data-background-size="cover"
+				data-background-opacity=".1">
+				<h2>AFTER THE CLASS</h2>
+				<p>just a few of the possibilities...</p>
+				<ul>
+					<li>enter the industry</li>
+					<li>community college</li>
+					<li>four year college</li>
+				</ul>
+				<p><strong>for juniors:</strong></p>
+				<ul>
+					<li>capital region technical early college</li>
+				</ul>
+			</section>
 
 			<!-- who should take the class -->
 
-				<section data-background-image="who.png" data-background-size="contain"
-					data-background-opacity=".3">
-					<h2>who should take this class?</h2>
-					<img src="empty.png" />
-				</section>
+			<section data-background-image="who.png" data-background-size="contain"
+				data-background-opacity=".3">
+				<h2>who should take this class?</h2>
+				<img src="empty.png" />
+			</section>
 
-				<section data-background-image="girl.jpg" data-background-size="cover"
-					data-background-opacity=".2">
-					<p><strong>looking especially for students who are...</strong></p>
-					<ul>
-						<li>willing to experiment</li>
-						<li>hard workers</li>
-					</ul>
-					<p>these also help, but are not required...</p>
-					<ul>
-						<li>creative & artistic</li>
-						<li>detailed-oriented</li>
-						<li>technologically savvy</li>
-						<li>questioning authority</li>
-					</ul>
-				</section>
+			<section data-background-image="girl.jpg" data-background-size="cover"
+				data-background-opacity=".2">
+				<p><strong>looking especially for students who are...</strong></p>
+				<ul>
+					<li>willing to experiment</li>
+					<li>hard workers</li>
+				</ul>
+				<p>these also help, but are not required...</p>
+				<ul>
+					<li>creative & artistic</li>
+					<li>detailed-oriented</li>
+					<li>technologically savvy</li>
+					<li>questioning authority</li>
+				</ul>
+			</section>
 
 			<!-- questions -->
 			<section data-background-image="meme.png" data-background-size="contain"
