--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ p {margin-bottom: 1rem;}
 
 	<iframe src="index-NEW.html"></iframe>
 	<section>
-		<p>instructions for playing presentation here</p>
+		<p>use keyboard arrow keys or press the arrows in the bottom-right corner of the presentation to step through the show.</p>
 		<p><strong>bennetc7@lcc.edu</strong><br><a href="https://mister-chad.com/" target='_blank' title='opens in new tab'>mister-chad.com</a></p>
 	</section>
 </body>
