--- a/index.html
+++ b/index.html
@@ -9,58 +9,31 @@
 	<title>digital media presentation</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/theme/league.css">
-	<style>
-		* {
-			box-sizing: border-box;
-			position: relative;
-		}
-
-		body {
-			position: relative;
-			margin: 0;
-			padding: 0;
-			-webkit-font-smoothing: antialiased;
-			-moz-osx-font-smoothing: grayscale;
-			text-rendering: optimizeLegibility;
-			background: #fff;
-			background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
-		}
-
-		iframe {
-			width: 80vw;
-			height: 70vh;
-			margin-left: 10vw;
-			margin-right: 10vw;
-			margin-top: 5vh;
-			margin-bottom: 2rem;
-			box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.05), 2px 2px 2px rgba(0, 0, 0, 0.08), 4px 4px 4px rgba(0, 0, 0, 0.08), 8px 8px 8px rgba(0, 0, 0, 0.08), 16px 16px 16px rgba(0, 0, 0, 0.08);
-		}
-
-		section {
-			width: 50vw;
-			margin-left: 25vw;
-			margin-right: 25vw;
-			text-align: center;
-			opacity: .8;
-		}
-
-		strong {
-			font-weight: 700;
-		}
-
-p {margin-bottom: 1rem;}
-		a {text-decoration: none; color:#7F1B95;}
-
-		a:hover {text-decoration: underline;}
+	<link rel="stylesheet" href="main.css">
 	</style>
+</head>
 
 <body>
-
-	<iframe src="index-NEW.html"></iframe>
+	<iframe src="slides.html"></iframe>
 	<section>
-		<p>use keyboard arrow keys or press the arrows in the bottom-right corner of the presentation to step through the show.</p>
-		<p><strong>bennetc7@lcc.edu</strong><br><a href="https://mister-chad.com/" target='_blank' title='opens in new tab'>mister-chad.com</a></p>
+		<p>use keyboard arrow keys or press the arrows in the bottom-right corner of the
+			presentation to step through the show.</p>
 	</section>
+
+
+	<div class="grid">
+		<div class="col-half-left center">
+			<h2>explore</h2>
+			<p><a href="testimonial.html">student testimonials</a></p>
+		</div>
+
+		<div class="col-half-right center">
+			<h2>communicate</h2>
+			<p><strong>bennetc7@lcc.edu</strong><br><a href="https://mister-chad.com/"
+					target='_blank' title='opens in new tab'>mister-chad.com</a></p>
+		</div>
+
+	</div>
 </body>
 
 </html>
