updating links and adding content to testimonials

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 		<div class="col-half-right center">
 			<h2>communicate</h2>
-			<p><strong>bennetc7@lcc.edu</strong><br><a href="https://mister-chad.com/"
-					target='_blank' title='opens in new tab'>mister-chad.com</a></p>
+			<p><a href="https://publish.obsidian.md/mister-chad/website/welcome"
+					target='_blank' title='opens in new tab'>my website</a></p>
 		</div>
 
 	</div>
