--- a/testimonial.html
+++ b/testimonial.html
@@ -8,7 +8,7 @@
 	<title>digital media presentation</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="main.css">
-	</head>
+</head>
 
 <body>
 	<div class="grid">
@@ -159,6 +159,20 @@
 		<div class="col-single-right gray">
 			<p>I was incredibly happy i took this class, it was so much fun and a great experience
 				and i think it really helped me prepare for life. <span>Anonymous Student</span></p>
+		</div>
+
+		<div class="col-single-left gray">
+			<figure><img src="me.png" alt="me" style="max-height: 10em;"></figure>
+		</div>
+
+		<div class="col-double-right gray">
+			<p>HI EVERYONE! No other class you encounter in college will have as much heart as this
+				one. This is an awesome opportunity to get some EXP so take that time to think about
+				your aspirations and goals. You'll get some dope access to expensive software and an
+				awesome base of knowledge that will build forward to other life experiences. And
+				YOU'LL LEARN TO MAKE A RESUME. I did not once learn that in college. Times are ROUGH
+				but you can be a DIAMOND IN THE ROUGH, so GIVE YOUR ALL!!! GO CLASS GO I BELIEVE IN
+				YOU!! <span>Sofia</span></p>
 		</div>
 </body>
 
