--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<div class="col-half-right center">
 			<h2>communicate</h2>
-			<p><a href="https://publish.obsidian.md/mister-chad/website/welcome"
+			<p><a href="https://mister-chad.com/"
 					target='_blank' title='opens in new tab'>my website</a></p>
 		</div>
 
