--- a/slides.html
+++ b/slides.html
@@ -341,7 +341,7 @@
 				<img src="empty.png" />
 			</section>
 
-			<section data-background-image="girl.jpg" data-background-size="cover"
+			<section data-background-image="girl.png" data-background-size="cover"
 				data-background-opacity=".2">
 				<p><strong>looking especially for students who are...</strong></p>
 				<ul>
