tweak links and style

--- a/index.html
+++ b/index.html
@@ -16,23 +16,17 @@
 <body>
 	<iframe src="slides.html"></iframe>
 	<section>
-		<p>use keyboard arrow keys or press the arrows in the bottom-right corner of the
+		<p>use keyboard arrow keys or press the arrows in the bottom-right
+			corner of the
 			presentation to step through the show.</p>
 	</section>
 
 
 	<div class="grid">
-		<div class="col-half-left center">
-			<h2>explore</h2>
-			<p><a href="testimonial.html">student testimonials</a></p>
-		</div>
-
-		<div class="col-half-right center">
-			<h2>communicate</h2>
-			<p><a href="https://mister-chad.com/"
-					target='_blank' title='opens in new tab'>my website</a></p>
-		</div>
-
+			<a  class="col-single-left center button"href="testimonial.html">student testimonials</a>
+			<a  class="col-single-mid center button"href="https://www.eatonresa.org/career-and-technical-education/career-preparation-center/" target="_blank" title="opens in new tab">ENROLL HERE</a>
+			<a  class="col-single-right center button" href="https://mister-chad.com/" target='_blank'
+				title='opens in new tab'>my website</a>
 	</div>
 </body>
 
