--- a/slides.html
+++ b/slides.html
@@ -361,7 +361,7 @@
 			<section data-background-image="meme.png" data-background-size="contain"
 				data-background-opacity=".3">
 				<h1>questions?</h1>
-				<p>send me an email <br><strong>bennetc7@lcc.edu</strong></p>
+				<p>send me an email <br><strong>bennetc7@star.lcc.edu</strong></p>
 			</section>
 		</div>
 	</div>
