--- a/slides.html
+++ b/slides.html
@@ -294,6 +294,13 @@
 				<p class="fragment fade-in-then-out back">is also a pair of socks</p>
 			</section>
 
+			<section data-background-image="pants.jpg" data-background-size="contain"
+				data-background-opacity=".7">
+				<p><strong>mister chad...</strong></p>
+				<img src="empty.png" />
+				<p class="fragment fade-in-then-out back">and a pair of pants</p>
+			</section>
+
 
 			<!-- career possibilities -->
 
