--- a/slides.html
+++ b/slides.html
@@ -298,7 +298,7 @@
 				data-background-opacity=".7">
 				<p><strong>mister chad...</strong></p>
 				<img src="empty.png" />
-				<p class="fragment fade-in-then-out back">and a pair of pants</p>
+				<p class="fragment fade-in-then-out back">is also a pair of pants</p>
 			</section>
 
 
