--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<div class="grid">
 			<a  class="col-single-left center button"href="testimonial.html">student testimonials</a>
-			<a  class="col-single-mid center button"href="https://eaton-resa.embark.com/login/apply" target="_blank" title="opens in new tab">ENROLL HERE</a>
+			<a  class="col-single-mid center button"href="https://eaton-resa.embark.com/login/apply?target=eatonresa2526" target="_blank" title="opens in new tab">ENROLL HERE</a>
 			<a  class="col-single-right center button" href="https://mister-chad.com/" target='_blank'
 				title='opens in new tab'>my website</a>
 	</div>
